--- a/style.css
+++ b/style.css
@@ -28,11 +28,32 @@ a:hover {
     color: #4c4a4a;
 }
 
+div#heading {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+}
+
+div#heading h1 {
+    color: #e43624;
+}
+
+div#heading img {
+    margin-left: 50px;
+}
+
+div#heading p {
+    width: 80%;
+    margin-left: 50px;
+}
+
 div#aboutDeflect {
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+    display: block;
 }
 
 div#tasklist {
@@ -53,6 +74,13 @@ div.projectDescription {
     border-radius: 4px;
 }
 
+div.hr {
+    background-color: #e43624;
+    width: calc(100% + 16px);
+    height: 6px;
+    margin-bottom: 30px;
+}
+
 h2.title {
     font-size: 18px;
     font-weight: 700;
@@ -63,7 +91,20 @@ p.description {
 }
 
 img#deflectLogo {
+    width: 300px;
+    height: 250px;
+    background-color: #E72D34;
+    padding: 30px;
+    border-radius: 8px;
 }
+
+img#equalitieLogo {
+    width: 300px;
+    height: 250px;
+    padding: 30px;
+    border-radius: 8px;
+}
+
 
 p#deflectDescription {
 }
